    * 인코딩 처리 오류로 morpho_mecab()에서 형태소 분석을 잘못 처리하는 
      문제의 해결 (thanks to @csh01470, #17)    
    * president_speech 도움말의 데이터셋 변수 이름 오류 및 vignettes의 변수 이름
      수정 (thanks to @sens5900r, #19)
    * get_ngrams()에서 "객체 'ngram_delim'를 찾을 수 없습니다" 오류 수정
      (thanks to @statkclee-이광춘, #23)
    * explore_docs()에서 "객체 'ngram_delim'를 찾을 수 없습니다" 오류 수정
      (thanks to @statkclee-이광춘, #23)      
      
  MINOR CHANGES:
    * 함수 이름으로 기능을 명확이 유추할 수 있도록 doc_quality()의 이름을 
      explore_docs()로 변경       
    * filter_text()에 as_logical 인수를 추가해서 필터링한 단일 문자열 벡터를 
      반환하거나, 필터링할 대상을 선택하기 위한 논리 벡터를 반환할지를 선택하는
      기능을 추가. 논리벡터는 tidytext 패키지와의 협업에 사용. (#14)
      
      
      
CHANGES IN R VERSION 1.2.0:
  NEW FEATURES:
    * 은전한닢 형태소분석기(mecab-ko)와 사전(mecab-ko-dic)을 사용자 환경에 
      설치하는 함수 추가 (thanks to @stacklee, #5)
      - install_mecab_ko()
      - Linix, Mac, Windows 운영체제 지원
    * n-gram 토큰화 기능 추가 
      - get_ngram()
    * KOSAC 감성사전 기반의 감성분석 
      - get_opinion()
    * vignettes 추가 (#2)
      - Introduce bitTA
      - Install mecab-ko (#6)
      
        
        
CHANGES IN R VERSION 1.1.0:
  MAJOR CHANGES:
    * 형태소분석기를 이용한 토크나이저 함수에서 복수개의 문서에 대해서 복수개의
      벡터를 갖는 리스트 객체로 반환
      - morpho_mecab()

  MINOR CHANGES:
    * morpho_mecab() type 인수의 기능 확장
        - "noun" : 일반명사(NNG)만 토큰화
        - "noun2" : 모든 명사를 토큰화



CHANGES IN R VERSION 1.0.0:
  NEW FEATURES:
    * 문자열을 분리하는 함수인 split_text() 추가
    * 네이버 카페 게시물 스크래핑 샘플 데이터인 buzz 데이터셋 추가

  MAJOR CHANGES:
    * 함수이름을 카멜 표기법(Camel Case)에서 스네이크 표기법(Snake Case)으로 변경
        - from getMeta()      to get_meta()
        - from getMeta()      to get_meta()
        - from getMorpHann()  to morpho_hann()
        - from getMorpMecab() to morpho_mecab()
        - from getMorpWise()  to morpho_wise()
        - from changeStr()    to replace_text()
        - from concatStr()    to concat_text()
        - from eraseStr()     to remove_text()
        - from filterStr()    to filter_text()